struct chunk: free has now some flags free: munmap big allocations thanks to free flags

--- a/TODO
+++ b/TODO
@@ -14,4 +14,4 @@ OK - implement free
       - merge prev and next block
 OK - implement realloc
    - improve realloc :
-      - merging with next block BUT verify if it's not a other page
+   STARTED   - merging with next block BUT verify if it's not a other page
