coding style: fix some imperfections

--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@ MALLOC
 ------
 OK - implement a simple first fit malloc
 OK - handle big allocation (more than 1 page)
-   - improve malloc :
+-- - improve malloc :
 OK    - thread safe
       - free list
 
@@ -10,9 +10,9 @@ MISC
 ----
 OK - implement calloc
 OK - implement free
-   - improve free :
+-- - improve free :
 OK    - merge prev and next block -> cause errors ?
 OK - implement realloc
-   - improve realloc :
+-- - improve realloc :
 OK    - merging with next block BUT verify if it's not a other page
 OK - fix realloc prev error
