test_suite: add Makfile rule

--- a/TODO
+++ b/TODO
@@ -23,4 +23,4 @@ OK - Menu to choose what to do
 OK - Test malloc with own c compiled binary
 OK - Ask user to launch a specific binary
 OK - show speed
-   - More tests .c
+OK - More tests .c
